se crea constructor para javascript en conductor  y se crea constructor para la clase Account MetodoConstructor

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -12,6 +12,8 @@
     <h1>POO: EN JAVASCRIPT</h1>
 
 </body>
+<script src="Car.js"></script>
+<script src="Account.js"></script>
 <script src="index.js"></script>
 
 </html>
