--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -12,8 +12,9 @@
     <h1>POO: EN JAVASCRIPT</h1>
 
 </body>
-<script src="Car.js"></script>
 <script src="Account.js"></script>
+<script src="Car.js"></script>
+<script src="uberX.js"></script>
 <script src="index.js"></script>
 
 </html>
